--- a/LocalitiesManager.Frontend/Views/Dashboard/Index.cshtml
+++ b/LocalitiesManager.Frontend/Views/Dashboard/Index.cshtml
@@ -16,27 +16,14 @@
             <th scope="col"></th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>ХХХ</td>
-            <td>awkj dnajwn djkfjse fjhas ejfasjerhf asjher fjahsre gfjsargjas 12</td>
-            <td>ЫЫЫЫ</td>
-            <td>
-                <div>
-                    <button class="btn btn-primary">Редактировать</button>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>fat</td>
-        </tr>
-        <tr>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>twitter</td>
-        </tr>
+        <tbody id="table-body">
+        
         </tbody>
     </table>
 </div>
+
+<script type="module">
+import { renderPage } from "/js/pages/dashboard-index/index.js";
+
+renderPage({});
+</script>
